1. Code coverage changes.