@@ -343,7 +343,6 @@
 		<module>common</module>
 		<module>pipeline</module>
 		<module>examples</module>
-		<module>coverage</module>
 	</modules>
 	<build>
 		<plugins>
@@ -359,40 +358,24 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.7</version>
-				<executions>
-					<execution>
-						<id>pre-unit-test</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-							<propertyName>jacocoArgLine</propertyName>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>	
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.0.0-M4</version>
 				<configuration>
 					<testFailureIgnore>true</testFailureIgnore>
-					<forkCount>1</forkCount>
+					<forkCount>3</forkCount>
     				<reuseForks>true</reuseForks>
-      				<argLine>@{jacocoArgLine} --enable-preview -Xmx6g -XX:MaxPermSize=256m -XX:-UseAdaptiveSizePolicy -XX:InitiatingHeapOccupancyPercent=60 </argLine>
+      				<argLine>@{jacocoArgLine} --enable-preview</argLine>
 					<excludes>
 						<exclude>**/*Test.java</exclude>
-						<exclude>**/MassiveDataPipelineBase.java</exclude>
-						<exclude>**/MassiveDataPipelineBiggerFileTest.java</exclude>
+						<exclude>**/*TestSuite2.java</exclude>
+						<exclude>**/StreamPipelineBase.java</exclude>
+						<exclude>**/StreamPipelineBiggerFileTest.java</exclude>
 					</excludes>
 					<includes>
-						<include>**/MDCCommonTestSuite.java</include>
+						<include>**/CommonsTestSuite.java</include>
 						<include>**/PipelineExecutorsTestSuite.java</include>
-						<include>**/MassiveDataCruncherTestSuite.java</include>
+						<include>**/StreamPipelineTestSuite.java</include>
 					</includes>
 				</configuration>
 			</plugin>
